--- a/source/index_vn.html
+++ b/source/index_vn.html
@@ -464,7 +464,7 @@
                                               <td width="49%" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                                                   <tr>
                                                     <td width="45" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_27.png" width="38" height="auto" alt="" style="display:block"/></td>
-                                                    <td valign="middle" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3; color: #000000;"><strong>Cho giải Chung cuộ</strong>c, đạt mức Giao dịch hợp lệ trong mỗi tháng từ &lt;amount&gt; VND</td>
+                                                    <td valign="middle" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3; color: #000000;"><strong>Cho giải Chung cuộc</strong>, đạt mức Giao dịch hợp lệ trong mỗi tháng từ &lt;amount&gt; VND</td>
                                                   </tr>
                                                 </table></td>
                                             </tr>
