--- a/source/index_en.html
+++ b/source/index_en.html
@@ -77,7 +77,7 @@
                     </tr>
                     <tr>
                       <td valign="top" style="padding-top:0px; font-size: 35px; color: #000000; line-height: 40px;font-family: Arial, Helvetica, sans-serif"
-                                  align="left">You know it’s worth it, so why hesitate?</td>
+                                  align="left">You know it’s worth it, why hesitate?</td>
                     </tr>
                     <tr>
                       <td valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
@@ -243,7 +243,7 @@
                             <td width="60" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;">&nbsp;</td>
                             <td valign="bottom" align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                                 <tr>
-                                  <td align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;">For every <strong style="color: #db0011;">20 points collected</strong>, you get <strong style="color: #db0011;">1 lucky ticket</strong> to join in the lucky draw at the end of the campaign. The more tickets you gain, the more chances you have!</td><strong>1 lucky ticket</strong>
+                                  <td align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;">For every <strong style="color: #db0011;">20 points collected</strong>, you get <strong style="color: #db0011;">1 lucky ticket</strong> to join in the lucky draw at the end of the campaign. The more tickets you gain, the more chances you have!</td>
                                 </tr>
                                 <tr>
                                   <td align="center" style="margin: 0; padding: 10px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><a href="#" target="_blank"><img src="image/chs_box_9_en.png" width="150" height="auto" alt="" style="display:block"/></a></td>
@@ -272,7 +272,8 @@
                                   <td valign="middle" align="left" style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_16_en.png" width="191" height="auto" alt="" style="display:block"/></td>
                                   <td align="left" style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;">&nbsp;</td>
                                   <td valign="middle" align="left" style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_19.png" width="35" height="auto" alt="" style="display:block"/></td>
-                                  <td valign="middle" align="left" style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><strong>Samsung Galaxy Z Fold5 Smartphone</strong><br />worth over VND 40 million each prize</td>
+                                  <td valign="middle" align="left" style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><strong>Samsung Galaxy Z Fold 5 Smartphone</strong><br />
+                                    worth over VND 40 million each prize</td>
                                 </tr>
                                 <tr>
                                   <td valign="middle" align="left" style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_17_en.png" width="191" height="auto" alt="" style="display:block"/></td>
@@ -411,7 +412,7 @@
                                               <td width="49%" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                                                   <tr>
                                                     <td width="40" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_26.png" width="27" height="auto" alt="" style="display:block"/></td>
-                                                    <td valign="middle" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3; color: #000000;">For converting a HSBC Credit card transaction to instalment on the HSBC Vietnam App</td>
+                                                    <td valign="middle" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3; color: #000000;">For converting a HSBC Credit Card transaction to instalment on the HSBC Vietnam App</td>
                                                   </tr>
                                                 </table></td>
                                             </tr>
