--- a/source/index_vn.html
+++ b/source/index_vn.html
@@ -132,11 +132,11 @@
                       <td width="130" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_box_5.jpg" width="130" height="auto" alt="" style="display:block"/></td>
                       <td valign="bottom" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                           <tr>
-                            <td height="91" valign="middle" align="center" bgcolor="#aed8ff" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 20px; line-height: 1.3;"><strong>16 CHUYẾN DU LỊCH CHÂU Á MỖI THÁNG<br />
+                            <td height="94" valign="middle" align="center" bgcolor="#aed8ff" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 20px; line-height: 1.3;"><strong>16 CHUYẾN DU LỊCH CHÂU Á MỖI THÁNG<br />
                             SẼ THUỘC VỀ AI?</strong></td>
                           </tr>
                           <tr>
-                            <td height="11" valign="top" align="left" bgcolor="#FFFFFF" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 1px; line-height: 1.3;">&nbsp;</td>
+                            <td height="9" valign="top" align="left" bgcolor="#FFFFFF" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 1px; line-height: 1.3;">&nbsp;</td>
                           </tr>
                           <tr>
                             <td height="113" valign="bottom" align="left" bgcolor="#ebebeb" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
@@ -355,7 +355,7 @@
                                               <td width="49%" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                                                   <tr>
                                                     <td width="45" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_27.png" width="38" height="auto" alt="" style="display:block"/></td>
-                                                    <td valign="middle" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3; color: #000000;"><strong>Cho Giải Quay thưởng số cuối chương trình</strong>, khi đạt mức Giao dịch hợp lệ mỗi tháng từ &lt;amount&gt; VND</td>
+                                                    <td valign="middle" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3; color: #000000;"><strong>Cho Giải Quay thưởng cuối chương trình</strong>, khi đạt mức Giao dịch hợp lệ mỗi tháng từ &lt;amount&gt; VND</td>
                                                   </tr>
                                                 </table></td>
                                             </tr>
