--- a/source/index_en.html
+++ b/source/index_en.html
@@ -499,7 +499,7 @@
 							  <td valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
 							</tr>
 							<tr>
-							  <td valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><sup style="font-size: 12px;">(*)</sup><a href="#" target="_blank" style="color: #000000; text-decoration: none;">Terms and Conditions apply</a></td>
+							  <td valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><sup style="font-size: 12px;">(*)</sup><a href="image/TnC_EN.pdf" target="_blank" style="color: #000000; text-decoration: none;">Terms and Conditions apply</a></td>
 						  </tr>
 						  </table></td>
 						<td width="28" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
