--- a/source/index_vn.html
+++ b/source/index_vn.html
@@ -132,7 +132,7 @@
                       <td width="130" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_box_5.jpg" width="130" height="auto" alt="" style="display:block"/></td>
                       <td valign="bottom" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                           <tr>
-                            <td height="94" valign="middle" align="center" bgcolor="#aed8ff" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 20px; line-height: 1.3;"><strong>16 CHUYẾN DU LỊCH CHÂU Á MỖI THÁNG<br />
+                            <td height="95" valign="middle" align="center" bgcolor="#aed8ff" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 20px; line-height: 1.3;"><strong>16 CHUYẾN DU LỊCH CHÂU Á MỖI THÁNG<br />
                             SẼ THUỘC VỀ AI?</strong></td>
                           </tr>
                           <tr>
@@ -222,7 +222,7 @@
                     <tr>
                       <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                           <tr>
-                            <td width="115" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_box_10.jpg" width="115" height="auto" alt="" style="display:block"/></td>
+                            <td width="115" valign="bottom" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_box_10.jpg" width="115" height="auto" alt="" style="display:block"/></td>
                             <td valign="bottom" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                                 <tr>
                                   <td height="92" valign="middle" align="center" bgcolor="#ff525f" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 20px; line-height: 1.3; color: #FFFFFF;"><strong>CHƯA HẾT, CƠ HỘI RÚT THĂM NHẬN SIÊU PHẨM CÔNG NGHỆ CUỐI CHƯƠNG TRÌNH</strong></td>
@@ -234,7 +234,7 @@
                                   <td height="37" valign="bottom" align="left" bgcolor="#ffdddd" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;">&nbsp;</td>
                                 </tr>
                               </table></td>
-                            <td width="115" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_box_11.jpg" width="115" height="auto" alt="" style="display:block"/></td>
+                            <td width="110" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_box_11.jpg" width="110" height="auto" alt="" style="display:block"/></td>
                           </tr>
                         </table></td>
                     </tr>
