--- a/source/index_en.html
+++ b/source/index_en.html
@@ -143,7 +143,7 @@
                                   <td align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;">Win a valuable <strong style="color: #db0011;">travel package</strong> when achieving the <strong style="color: #db0011;">highest accumulated points in a month</strong></td>
                                 </tr>
                                 <tr>
-                                  <td align="center" style="margin: 0; padding: 10px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><a href="#" target="_blank"><img src="image/chs_box_9_en.png" width="150" height="auto" alt="" style="display:block"/></a></td>
+                                  <td align="center" style="margin: 0; padding: 10px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><a href="image/TnC_EN.pdf" target="_blank"><img src="image/chs_box_9_en.png" width="150" height="auto" alt="" style="display:block"/></a></td>
                                 </tr>
                               </table></td>
                           </tr>
@@ -158,7 +158,7 @@
               <tr>
                 <td bgcolor="#ebebeb" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                     <tr>
-                      <td width="28" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_box_8.jpg" width="28" height="auto" alt="" style="display:block"/></td>
+                      <td width="28" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_box_8.jpg" width="18" height="auto" alt="" style="display:block"/></td>
                       <td valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                           <tr>
                             <td width="196" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
@@ -246,7 +246,7 @@
                                   <td align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;">For every <strong style="color: #db0011;">20 points collected</strong>, you get <strong style="color: #db0011;">1 lucky ticket</strong> to join in the lucky draw at the end of the campaign. The more tickets you gain, the more chances you have!</td>
                                 </tr>
                                 <tr>
-                                  <td align="center" style="margin: 0; padding: 10px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><a href="#" target="_blank"><img src="image/chs_box_9_en.png" width="150" height="auto" alt="" style="display:block"/></a></td>
+                                  <td align="center" style="margin: 0; padding: 10px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><a href="image/TnC_EN_1.pdf" target="_blank"><img src="image/chs_box_9_en.png" width="150" height="auto" alt="" style="display:block"/></a></td>
                                 </tr>
                               </table></td>
                             <td width="80" valign="bottom" align="right" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_box_14.jpg" width="80" height="auto" alt="" style="display:block"/></td>
@@ -278,7 +278,7 @@
                                 <tr>
                                   <td valign="middle" align="left" style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_17_en.png" width="191" height="auto" alt="" style="display:block"/></td>
                                   <td align="left" style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;">&nbsp;</td>
-                                  <td valign="middle" align="left" style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_20.png" width="35" height="auto" alt="" style="display:block"/></td>
+                                  <td valign="middle" align="left" style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_20.png" width="30" height="auto" alt="" style="display:block"/></td>
                                   <td valign="middle" align="left" style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><strong>Samsung Galaxy S23 Ultra Smartphone</strong><br />worth over VND 30 million each prize</td>
                                 </tr>
                               </table></td>
@@ -499,7 +499,7 @@
 							  <td valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
 							</tr>
 							<tr>
-							  <td valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><sup style="font-size: 12px;">(*)</sup><a href="image/TnC_EN.pdf" target="_blank" style="color: #000000; text-decoration: none;">Terms and Conditions apply</a></td>
+							  <td valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><sup style="font-size: 12px;">(*)</sup>Terms and Conditions apply</td>
 						  </tr>
 						  </table></td>
 						<td width="28" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
