--- a/source/index_vn.html
+++ b/source/index_vn.html
@@ -144,7 +144,7 @@
                                   <td align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;">Nhận ngay <strong style="color: #db0011;">chuyến du lịch</strong> giá trị khi đạt <strong style="color: #db0011;">điểm tích lũy cao nhất trong tháng</strong></td>
                                 </tr>
                                 <tr>
-                                  <td align="center" style="margin: 0; padding: 10px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><a href="#" target="_blank"><img src="image/chs_box_9.png" width="150" height="auto" alt="" style="display:block"/></a></td>
+                                  <td align="center" style="margin: 0; padding: 10px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><a href="image/TnC_VN.pdf" target="_blank"><img src="image/chs_box_9.png" width="150" height="auto" alt="" style="display:block"/></a></td>
                                 </tr>
                               </table></td>
                           </tr>
@@ -159,7 +159,7 @@
               <tr>
                 <td bgcolor="#ebebeb" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                     <tr>
-                      <td width="28" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_box_8.jpg" width="28" height="auto" alt="" style="display:block"/></td>
+                      <td width="28" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_box_8.jpg" width="18" height="auto" alt="" style="display:block"/></td>
                       <td valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                           <tr>
                             <td width="196" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
@@ -247,7 +247,7 @@
                                   <td align="center" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;">Với mỗi <strong style="color: #db0011;">20 điểm tích lũy</strong>, bạn sẽ nhận <strong style="color: #db0011;">1 lượt rút thăm may mắn</strong>. Tích càng nhiều điểm, càng nhiều cơ hội sở hữu những giải thưởng giá trị.</td>
                                 </tr>
                                 <tr>
-                                  <td align="center" style="margin: 0; padding: 10px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><a href="#" target="_blank"><img src="image/chs_box_9.png" width="150" height="auto" alt="" style="display:block"/></a></td>
+                                  <td align="center" style="margin: 0; padding: 10px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><a href="image/TnC_VN_1.pdf" target="_blank"><img src="image/chs_box_9.png" width="150" height="auto" alt="" style="display:block"/></a></td>
                                 </tr>
                               </table></td>
                             <td width="80" valign="bottom" align="right" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_box_14.jpg" width="80" height="auto" alt="" style="display:block"/></td>
@@ -278,7 +278,7 @@
                                 <tr>
                                   <td valign="middle" align="left" style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_17.png" width="191" height="auto" alt="" style="display:block"/></td>
                                   <td align="left" style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;">&nbsp;</td>
-                                  <td valign="middle" align="left" style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_20.png" width="35" height="auto" alt="" style="display:block"/></td>
+                                  <td valign="middle" align="left" style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_20.png" width="30" height="auto" alt="" style="display:block"/></td>
                                   <td valign="middle" align="left" style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><strong>Điện thoại Samsung S23 Ultra</strong><br />trị giá hơn 30 triệu VND/ giải</td>
                                 </tr>
                               </table></td>
@@ -499,7 +499,7 @@
                             <td valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
                           </tr>
                           <tr>
-                            <td valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><sup style="font-size: 12px;">(*)</sup><a href="image/TnC_VN.pdf" target="_blank" style="color: #000000; text-decoration: none;">Điều khoản và điều kiện áp dụng</a></td>
+                            <td valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><sup style="font-size: 12px;">(*)</sup>Điều khoản và điều kiện áp dụng</td>
                           </tr>
                         </table></td>
                       <td width="28" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
