--- a/source/index_en.html
+++ b/source/index_en.html
@@ -126,7 +126,7 @@
               <tr>
                 <td valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
               </tr>
-			  <tr>
+              <tr>
                 <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                     <tr>
                       <td width="130" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_box_5.jpg" width="130" height="auto" alt="" style="display:block"/></td>
@@ -279,7 +279,8 @@
                                   <td valign="middle" align="left" style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_17_en.png" width="191" height="auto" alt="" style="display:block"/></td>
                                   <td align="left" style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;">&nbsp;</td>
                                   <td valign="middle" align="left" style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_20.png" width="30" height="auto" alt="" style="display:block"/></td>
-                                  <td valign="middle" align="left" style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><strong>Samsung Galaxy S23 Ultra Smartphone</strong><br />worth over VND 30 million each prize</td>
+                                  <td valign="middle" align="left" style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><strong>Samsung Galaxy S23 Ultra Smartphone</strong><br />
+                                    worth over VND 30 million each prize</td>
                                 </tr>
                               </table></td>
                             <td width="67" valign="top" align="right" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_box_13.jpg" width="67" height="auto" alt="" style="display:block"/></td>
@@ -463,7 +464,7 @@
                                 </tr>
                               </table></td>
                           </tr>
-						  <tr>
+                          <tr>
                             <td align="center" style="margin: 0; padding: 10px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 18px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                                 <tr>
                                   <td width="142" valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_18.jpg" width="142" height="auto" alt="" style="display:block"/></td>
@@ -474,7 +475,7 @@
                                             <tr>
                                               <td width="40" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_22.png" width="29" height="auto" alt="" style="display:block"/></td>
                                               <td valign="middle" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3; color: #000000;">For every <strong>VND 1 million</strong> spent<br />
-                                              domestically using your HSBC Credit Card</td>
+                                                domestically using your HSBC Credit Card</td>
                                             </tr>
                                           </table></td>
                                       </tr>
@@ -491,21 +492,21 @@
                   </table></td>
               </tr>
               <tr>
-				  <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellspacing="0" cellpadding="0">
-					  <tr>
-						<td width="28" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
-						<td valign="top" style="font-size: 16px;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
-							<tr>
-							  <td valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
-							</tr>
-							<tr>
-							  <td valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><sup style="font-size: 12px;">(*)</sup>Terms and Conditions apply</td>
-						  </tr>
-						  </table></td>
-						<td width="28" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
-					  </tr>
-					</table></td>
-				</tr>
+                <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellspacing="0" cellpadding="0">
+                    <tr>
+                      <td width="28" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
+                      <td valign="top" style="font-size: 16px;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
+                          <tr>
+                            <td valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
+                          </tr>
+                          <tr>
+                            <td valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><sup style="font-size: 12px;">(*)</sup>Terms and Conditions apply</td>
+                          </tr>
+                        </table></td>
+                      <td width="28" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
+                    </tr>
+                  </table></td>
+              </tr>
             </table></td>
         </tr>
         <tr>
@@ -643,6 +644,7 @@
                       <td align="left" style="margin: 0; padding: 10px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 9px; line-height: 13px; color: #808080"> © Copyright. HSBC Bank (Vietnam) Ltd. 2023. All rights reserved. </td>
                     </tr>
                   </table>
+                  
                   <!--------------------- END IMPORTANT NOTE VI ---------------------> 
                   <!--------------------- START IMPORTANT NOTE EN ---------------------> 
                   <!------------------ END IMPORTANT NOTE EN ------------------></td>
