--- a/source/index_vn.html
+++ b/source/index_vn.html
@@ -2,7 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title><Name> ơi! Tổng quà tặng trị giá hơn 2 tỷ VND đang chờ bạn mùa lễ hội này</title>
+<title>
+<Name>
+ơi! Tổng quà tặng trị giá hơn 2 tỷ VND đang chờ bạn mùa lễ hội này</title>
 <style type="text/css">
 .chs_body {
     font-family: Arial, Helvetica, sans-serif;
@@ -133,7 +135,7 @@
                       <td valign="bottom" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                           <tr>
                             <td height="95" valign="middle" align="center" bgcolor="#aed8ff" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 20px; line-height: 1.3;"><strong>16 CHUYẾN DU LỊCH CHÂU Á MỖI THÁNG<br />
-                            SẼ THUỘC VỀ AI?</strong></td>
+                              SẼ THUỘC VỀ AI?</strong></td>
                           </tr>
                           <tr>
                             <td height="9" valign="top" align="left" bgcolor="#FFFFFF" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 1px; line-height: 1.3;">&nbsp;</td>
@@ -217,7 +219,7 @@
               <tr>
                 <td valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_img_square.png" width="28" height="auto" alt="" style="display:block"/></td>
               </tr>
-			  <tr>
+              <tr>
                 <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                     <tr>
                       <td style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
@@ -267,19 +269,21 @@
                                   <td width="28" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;">&nbsp;</td>
                                   <td width="50" valign="midle" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_18.png" width="35" height="auto" alt="" style="display:block"/></td>
                                   <td valign="middle" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><strong>Siêu phẩm TV Samsung QLED 85"</strong><br />
-                                  trị giá hơn 200 triệu VND/ giải</td>
+                                    trị giá hơn 200 triệu VND/ giải</td>
                                 </tr>
                                 <tr>
                                   <td valign="middle" align="left" style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_16.png" width="191" height="auto" alt="" style="display:block"/></td>
                                   <td align="left" style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;">&nbsp;</td>
                                   <td valign="middle" align="left" style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_19.png" width="35" height="auto" alt="" style="display:block"/></td>
-                                  <td valign="middle" align="left" style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><strong>Điện thoại Samsung Z Fold 5</strong><br />trị giá hơn 40 triệu VND/ giải</td>
+                                  <td valign="middle" align="left" style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><strong>Điện thoại Samsung Z Fold 5</strong><br />
+                                    trị giá hơn 40 triệu VND/ giải</td>
                                 </tr>
                                 <tr>
                                   <td valign="middle" align="left" style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_17.png" width="191" height="auto" alt="" style="display:block"/></td>
                                   <td align="left" style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;">&nbsp;</td>
                                   <td valign="middle" align="left" style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_20.png" width="30" height="auto" alt="" style="display:block"/></td>
-                                  <td valign="middle" align="left" style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><strong>Điện thoại Samsung S23 Ultra</strong><br />trị giá hơn 30 triệu VND/ giải</td>
+                                  <td valign="middle" align="left" style="margin: 0; padding: 15px 0 0 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><strong>Điện thoại Samsung S23 Ultra</strong><br />
+                                    trị giá hơn 30 triệu VND/ giải</td>
                                 </tr>
                               </table></td>
                             <td width="67" valign="top" align="right" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3;"><img src="image/chs_box_13.jpg" width="67" height="auto" alt="" style="display:block"/></td>
@@ -336,7 +340,7 @@
                                 </tr>
                               </table></td>
                           </tr>
-						  <tr>
+                          <tr>
                             <td align="center" style="margin: 0; padding: 10px 0 10px 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 18px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                                 <tr>
                                   <td width="142" valign="top" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_20.jpg" width="142" height="auto" alt="" style="display:block"/></td>
@@ -474,7 +478,7 @@
                                             <tr>
                                               <td width="40" valign="top" align="left" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><img src="image/chs_box_22.png" width="29" height="auto" alt="" style="display:block"/></td>
                                               <td valign="middle" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 14px; line-height: 1.3; color: #000000;">Với mỗi <strong>1 triệu VND</strong> chi tiêu<br />
-                                              nội địa qua Thẻ HSBC</td>
+                                                nội địa qua Thẻ HSBC</td>
                                             </tr>
                                           </table></td>
                                       </tr>
